--- a/RequestService/RequestServiceImpl.csproj
+++ b/RequestService/RequestServiceImpl.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Dto\StreetDto.cs" />
     <Compile Include="Dto\StreetPrefixDto.cs" />
     <Compile Include="Dto\UserDto.cs" />
+    <Compile Include="Dto\WebUserDto.cs" />
     <Compile Include="Dto\WorkerDto.cs" />
     <Compile Include="Dto\WorkerHistoryDto.cs" />
     <Compile Include="MysqlDecorator.cs" />
