--- a/RequestWcfService/Web.config
+++ b/RequestWcfService/Web.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings />
+  <appSettings>
+    <add key="ConnectionServer" value="localhost" />
+    <!--<add key="ConnectionServer" value="192.168.1.130" />-->
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <httpRuntime />
