--- a/RequestWcfService/Web.config
+++ b/RequestWcfService/Web.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="ConnectionServer" value="localhost" />
-    <!--<add key="ConnectionServer" value="192.168.1.130" />-->
+    <!--<add key="ConnectionServer" value="localhost" />-->
+    <add key="ConnectionServer" value="192.168.1.130" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
