--- a/CRMPhone/CRMPhone.csproj
+++ b/CRMPhone/CRMPhone.csproj
@@ -70,6 +70,9 @@
     <Compile Include="Controls\Admins\HouseAdminControl.xaml.cs">
       <DependentUpon>HouseAdminControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Admins\RedirectAdminControl.xaml.cs">
+      <DependentUpon>RedirectAdminControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Admins\ServiceAdminControl.xaml.cs">
       <DependentUpon>ServiceAdminControl.xaml</DependentUpon>
     </Compile>
@@ -84,6 +87,9 @@
     </Compile>
     <Compile Include="Dialogs\Admins\HouseAddOrEditDialog.xaml.cs">
       <DependentUpon>HouseAddOrEditDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\Admins\PhoneAddOrUpdateDialog.xaml.cs">
+      <DependentUpon>PhoneAddOrUpdateDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\Admins\ServiceAddOrEditDialog.xaml.cs">
       <DependentUpon>ServiceAddOrEditDialog.xaml</DependentUpon>
@@ -106,6 +112,7 @@
       <DependentUpon>ChangeExecuteDateDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\Admins\HouseAdminDialogViewModel.cs" />
+    <Compile Include="ViewModel\Admins\PhoneDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\ServiceDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\SpecialityDialogViewModel.cs" />
     <Compile Include="ViewModel\Admins\StreetAdminDialogViewModel.cs" />
@@ -129,6 +136,7 @@
       <DependentUpon>UsersControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModel\HouseAdminControlContext.cs" />
+    <Compile Include="ViewModel\RedirectAdminControlContext.cs" />
     <Compile Include="ViewModel\RequestItemViewModel.cs" />
     <Compile Include="LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
@@ -160,6 +168,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Controls\Admins\RedirectAdminControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\Admins\ServiceAdminControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -177,6 +189,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Dialogs\Admins\HouseAddOrEditDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dialogs\Admins\PhoneAddOrUpdateDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
