[~] Методы для статистики в вебе

--- a/RequestService/RequestServiceImpl.csproj
+++ b/RequestService/RequestServiceImpl.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Dto\ServiceDto.cs" />
     <Compile Include="Dto\SipDto.cs" />
     <Compile Include="Dto\SpecialityDto.cs" />
+    <Compile Include="Dto\StatInfoDto.cs" />
     <Compile Include="Dto\StatusDto.cs" />
     <Compile Include="Dto\StatusHistoryDto.cs" />
     <Compile Include="Dto\StreetDto.cs" />
@@ -90,6 +91,7 @@
     <Compile Include="MysqlDecorator.cs" />
     <Compile Include="RequestService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestWebService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
