[~] - Changes for web + AttachmentDocuments

--- a/RequestService/RequestServiceImpl.csproj
+++ b/RequestService/RequestServiceImpl.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,9 +53,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppSettings.cs" />
+    <Compile Include="Connected Services\SaveWcfService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Dto\ActiveChannelsDto.cs" />
     <Compile Include="Dto\AddressDto.cs" />
     <Compile Include="Dto\AddressTypeDto.cs" />
+    <Compile Include="Dto\AttachmentDto.cs" />
     <Compile Include="Dto\BlackListPhoneDto.cs" />
     <Compile Include="Dto\CallsListDto.cs" />
     <Compile Include="Dto\CityDto.cs" />
@@ -96,7 +104,35 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Connected Services\SaveWcfService\SaveService.wsdl" />
+    <None Include="Connected Services\SaveWcfService\SaveService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Connected Services\SaveWcfService\SaveService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\SaveWcfService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\SaveWcfService\SaveService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\SaveWcfService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\SaveWcfService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\SaveWcfService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
