--- a/CRMPhone/App.config
+++ b/CRMPhone/App.config
@@ -42,4 +42,20 @@
       </providers>
     </roleManager>
   </system.web>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ISaveService"  maxBufferPoolSize="2147483647"
+                 maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+          <readerQuotas maxDepth="2147483647" maxStringContentLength="2147483647"
+                        maxArrayLength="2147483647" maxBytesPerRead="2147483647" maxNameTableCharCount="2147483647" />
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://192.168.1.124:24801/SaveService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISaveService"
+        contract="SaveWcfService.ISaveService" name="BasicHttpBinding_ISaveService" />
+    </client>
+  </system.serviceModel>
 </configuration>
